# bolt-python-support-agent

./: .gitignore  README.md  manifest.json  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/commands/: unvendor-bolt.md
.github/: MAINTAINERS_GUIDE.md  dependabot.yml
.github/workflows/: ruff.yml  tests.yml
.slack/: config.json
agent/: casey.py
agent/tools/: knowledge_base.py  password_reset.py  system_status.py
claude-agent-sdk/: .env.sample  README.md  app.py  app_oauth.py  manifest.json  manifest_oauth.json  oauth.py  pyproject.toml  requirements.txt
claude-agent-sdk/.claude/: CLAUDE.md
claude-agent-sdk/.slack/: config.json
claude-agent-sdk/agent/: __init__.py  casey.py  context.py  deps.py
claude-agent-sdk/agent/tools/: __init__.py  emoji_reaction.py  knowledge_base.py  mark_resolved.py  password_reset.py  system_status.py  ticket.py  user_permissions.py
claude-agent-sdk/listeners/: plan_streamer.py
claude-agent-sdk/listeners/actions/: __init__.py  account_connection.py  category_buttons.py  feedback.py  feedback_buttons.py  issue_buttons.py
claude-agent-sdk/listeners/events/: __init__.py  app_home_opened.py  app_mentioned.py  assistant_thread_started.py  message.py  message_im.py
claude-agent-sdk/listeners/views/: __init__.py  app_home_builder.py  feedback_block.py  issue_modal.py
claude-agent-sdk/tests/: test_app_home_opened.py
listeners/actions/: feedback.py
listeners/events/: app_mentioned.py  message_im.py
listeners/views/: feedback_block.py  issue_modal.py
openai-agents-sdk/: .env.sample  .gitignore  README.md  app.py  app_oauth.py  manifest.json  manifest_oauth.json  oauth.py  pyproject.toml  requirements.txt
openai-agents-sdk/.claude/: CLAUDE.md
openai-agents-sdk/.slack/: config.json
openai-agents-sdk/agent/: __init__.py  deps.py  support_agent.py
openai-agents-sdk/agent/tools/: __init__.py  emoji_reaction.py  knowledge_base.py  mark_resolved.py  password_reset.py  system_status.py  ticket.py  user_permissions.py
openai-agents-sdk/listeners/: plan_streamer.py
openai-agents-sdk/listeners/actions/: __init__.py  account_connection.py  category_buttons.py  feedback.py
openai-agents-sdk/listeners/events/: __init__.py  app_home_opened.py  app_mentioned.py  message.py  message_im.py
openai-agents-sdk/listeners/views/: app_home_builder.py  issue_modal.py
openai-agents-sdk/tests/: test_app_home_opened.py  test_view_builders.py
openai-agents-sdk/thread_context/: store.py
pydantic-ai/: .env.sample  .gitignore  README.md  app.py  app_oauth.py  constants.py  manifest.json  manifest_oauth.json  oauth.py  pyproject.toml  requirements.txt
pydantic-ai/.claude/: CLAUDE.md
pydantic-ai/.slack/: config.json
pydantic-ai/agent/: __init__.py  casey.py  deps.py
pydantic-ai/agent/tools/: __init__.py  emoji_reaction.py  password_reset.py  ticket.py  user_permissions.py
pydantic-ai/listeners/: plan_streamer.py
pydantic-ai/listeners/actions/: __init__.py  account_connection.py  disconnect.py  feedback.py
pydantic-ai/listeners/events/: app_home_opened.py  app_mentioned.py  assistant_thread_started.py  message.py  message_im.py
pydantic-ai/listeners/views/: app_home_builder.py  issue_modal.py
pydantic-ai/oauth/: __init__.py  handler.py  state.py
pydantic-ai/tests/: test_view_builders.py
